# migadu-rs

./: .mcp.json  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
crates/migadu-cli/: Cargo.toml
crates/migadu-cli/src/: main.rs
crates/migadu-client/: Cargo.toml
crates/migadu-client/src/: client.rs  lib.rs
crates/migadu-client/src/api/: forwardings.rs  identities.rs  mailboxes.rs  rewrites.rs
crates/migadu-client/src/types/: alias.rs  forwarding.rs  identity.rs  mailbox.rs  rewrite.rs
crates/migadu-client/tests/: integration.rs
crates/migadu-mcp/: Cargo.toml
crates/migadu-mcp/src/: main.rs
src/: error.rs  lib.rs
src/api/: aliases.rs  mod.rs
src/types/: alias.rs  forwarding.rs  identity.rs  mailbox.rs  mod.rs  rewrite.rs
tests/: integration.rs
