[package]
name = "migadu"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Migadu email hosting API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
