[package]
name = "migadu-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust client library for the Migadu email hosting API"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
